--- a/style.css
+++ b/style.css
@@ -22,10 +22,20 @@ a {
 }
 .contenedor_principal__productos{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;
     gap: 2rem;
     justify-items: center;
     margin: 2rem
+}
+@media (min-width: 768px) {
+    .contenedor_principal__productos{
+        grid-template-columns:  repeat(2, 1fr);
+    }
+}
+@media (min-width: 1200px) {
+    .contenedor_principal__productos{
+        grid-template-columns:  repeat(3, 1fr);
+    }
 }
 .btn_tacho{
     border: none;
